our main dishes

--- a/ourmaindishes.html
+++ b/ourmaindishes.html
@@ -11,17 +11,14 @@
 <body>
     <!-- start our main dishes section -->
      <section>
-        <div class="our main dishes col-6 row">
-            <div class="picsurena">
-                <img class="imgsurena" src="./dish-bg.png" alt="burger and cocke">
-            </div>
-            <div class="textsurena">
+        <div class="ourmaindishes row">
+            <div class="textsurena col-6 d-flex container">
                 <div>
-                    <div>
+                    <div class="divh2s">
                         <h2 class="h2surena">OUR MAIN DISHES</h2>
                     </div>
                     <div>
-                        <div>
+                        <div class="users">
                             <h3 class="h3surena">
                                 BREAKFAST MOOD ... . . $29.00
                             </h3>
@@ -29,7 +26,7 @@
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             </P>
                         </div>
-                        <div>
+                        <div class="users">
                             <h3 class="h3surena">
                                 DRINKING PROSPECT ... . . $$9.45
                             </h3>
@@ -37,7 +34,7 @@
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             </P>
                         </div>
-                        <div>
+                        <div class="users">
                             <h3 class="h3surena">
                                 Burger Time ... . . $12.45
                             </h3>
@@ -45,7 +42,7 @@
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             </P>
                         </div>
-                        <div>
+                        <div class="users">
                             <h3 class="h3surena">
                                 Grilled Chicken ... . . $19.45
                             </h3>
@@ -55,6 +52,9 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="picsurena col-6">
+                <img class="imgsurena" src="./dish-bg.png" alt="burger and cocke">
             </div>
         </div>
      </section>
